- Added individual fragments - Updated navigation drawer - Changed login screen look - Other small changes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -10,10 +10,21 @@
     <string name="login_username">Student ID</string>
     <string name="login_password">Password</string>
     <string name="login_button">Login</string>
-    
-    
+
     
     <string name="title_activity_main">Main</string>
     <string name="button_logout">Logout</string>
-
+    
+    <string-array name="planets_array">
+        <item>Mercury</item>
+        <item>Venus</item>
+        <item>Earth</item>
+        <item>Mars</item>
+        <item>Jupiter</item>
+        <item>Saturn</item>
+        <item>Uranus</item>
+        <item>Neptune</item>
+    </string-array>
+	<string name="drawer_open">Open navigation drawer</string>
+    <string name="drawer_close">Close navigation drawer</string>
 </resources>
